[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/Characters/Witch/tile006.png" type="Texture" id=2]
[ext_resource path="res://gfx/Characters/Witch/tile007.png" type="Texture" id=3]
[ext_resource path="res://gfx/Characters/Witch/tile008.png" type="Texture" id=4]
[ext_resource path="res://gfx/Characters/Witch/tile013.png" type="Texture" id=5]
[ext_resource path="res://gfx/Characters/Witch/tile012.png" type="Texture" id=6]
[ext_resource path="res://gfx/Characters/Witch/tile014.png" type="Texture" id=7]
[ext_resource path="res://gfx/Characters/Witch/tile010.png" type="Texture" id=8]
[ext_resource path="res://gfx/Characters/Witch/tile001.png" type="Texture" id=9]
[ext_resource path="res://gfx/Characters/Witch/tile002.png" type="Texture" id=10]
[ext_resource path="res://gfx/Characters/Witch/tile003.png" type="Texture" id=11]
[ext_resource path="res://gfx/Characters/Witch/tile004.png" type="Texture" id=12]
[ext_resource path="res://gfx/Characters/Witch/tile000.png" type="Texture" id=13]
[ext_resource path="res://gfx/Characters/Witch/tile017.png" type="Texture" id=14]
[ext_resource path="res://gfx/Characters/Witch/tile018.png" type="Texture" id=15]
[ext_resource path="res://gfx/Characters/Witch/tile019.png" type="Texture" id=16]
[ext_resource path="res://gfx/Characters/Witch/tile020.png" type="Texture" id=17]
[ext_resource path="res://Scripts/States/Inputs/CasterHandler.gd" type="Script" id=18]
[ext_resource path="res://Scripts/States/NPC/MoveAway.gd" type="Script" id=19]
[ext_resource path="res://Scripts/States/NPC/Cast.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Effects/SpellEffect.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scripts/States/NPC/Idle.gd" type="Script" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Cast",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "MoveAway",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 102.961

[node name="Caster" index="0" instance=ExtResource( 1 )]
scale = Vector2( -1, 1 )
collision_layer = 4
collision_mask = 2
SPEED = 60
MAX_LIFE = 1
START_STATE_PATH = NodePath("List States/Idle")
facing_right = false

[node name="CharacterShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="2"]
frames = SubResource( 2 )
animation = "Cast"
frame = 3

[node name="InputHandler" parent="." index="3"]
script = ExtResource( 18 )

[node name="AttackRay" type="RayCast2D" parent="InputHandler" index="0"]
enabled = true
cast_to = Vector2( 80, 0 )

[node name="RunAway" type="RayCast2D" parent="InputHandler" index="1"]
position = Vector2( -20, 0 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="PlayerFinder" type="Area2D" parent="InputHandler" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputHandler/PlayerFinder" index="0"]
shape = SubResource( 3 )

[node name="List States" parent="." index="4"]
editor/display_folded = false

[node name="MoveAway" type="Node2D" parent="List States" index="2"]
script = ExtResource( 19 )

[node name="WallAhead" type="RayCast2D" parent="List States/MoveAway" index="0"]
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 2
collide_with_areas = true

[node name="BackSight" type="RayCast2D" parent="List States/MoveAway" index="1"]
enabled = true
cast_to = Vector2( -50, 0 )
collide_with_areas = true

[node name="Timer" type="Timer" parent="List States/MoveAway" index="2"]
wait_time = 0.2
one_shot = true

[node name="Cast" type="Node2D" parent="List States" index="3"]
script = ExtResource( 20 )
Spell = ExtResource( 21 )

[node name="CastingPoint" type="Position2D" parent="List States/Cast" index="0"]
position = Vector2( 4, 0 )

[node name="Timer" type="Timer" parent="List States/Cast" index="1"]
wait_time = 2.0
one_shot = true

[node name="Idle" type="Node2D" parent="List States" index="4"]
script = ExtResource( 22 )
[connection signal="body_entered" from="InputHandler/PlayerFinder" to="InputHandler" method="_on_PlayerFinder_body_entered"]
[connection signal="body_exited" from="InputHandler/PlayerFinder" to="InputHandler" method="_on_PlayerFinder_body_exited"]
